[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cutcaption"
version = "0.1.0"
description = "Fast local CLI/TUI for generating styled burned-in captions for videos."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "cutcaption contributors" },
]
keywords = ["captions", "subtitles", "whisper", "video", "cli"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
]
dependencies = []

[project.optional-dependencies]
transcription = [
  "faster-whisper>=1.1,<2",
]
tui = [
  "textual>=0.86,<1",
]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
cutcaption = "cutcaption.presentation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
